implement import of replace by hints for code system versions
